[tool.poetry]
name = "eth-blocky"
version = "0.2.3"
description = ""
authors = ["vonum <vonum.mk@gmail.com>"]
readme = "README.md"
packages = [{include = "eth_blocky"}]

[tool.poetry.dependencies]
python = "^3.11"
arrow = "^1.2.3"
web3 = "^6.4.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core", "cython"]
build-backend = "poetry.core.masonry.api"
